# externref

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: asmtable.rs  lib.rs  main.rs  testutil.rs
tests/: e2e.rs
